#27 - Header displays correctly on mobile devices

--- a/src/app/header/profile.component.css
+++ b/src/app/header/profile.component.css
@@ -34,3 +34,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media only screen and (max-width : 640px) {
+    .profile-info {
+        visibility: hidden;
+    }
+}
